--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Welcome to Wishez</h1>
+<h2>Where you can change the world</h2>
+<%= link_to "I'm a parent", new_parent_path %>
+<%= link_to "I want to help", kids_path %>
