--- a/app/views/parents/new.html.erb
+++ b/app/views/parents/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Parents#new</h1>
-<p>Find me in app/views/parents/new.html.erb</p>
+<h1>Sign up your kid in need</h1>
+
+<%= form_for @parent do |f| %>
+  <%= f.text_field :first_name %>
+  <%= f.submit %>
+<% end %>
