updates view pages

--- a/app/views/benefactors/index.html.erb
+++ b/app/views/benefactors/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Benefactors#index</h1>
-<p>Find me in app/views/benefactors/index.html.erb</p>
+<h1>Benefactors Page</h1>
+<%= link_to "I want to help", kids_path %>
