--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Items#new</h1>
-<p>Find me in app/views/items/new.html.erb</p>
+<h1>New Item</h1>
+
+<%= form_for @item do |f| %>
+  <%= f.text_field :title %>
+  <%= f.submit %>
+<% end %>
