--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -1,2 +1,15 @@
-<h1>Kids#show</h1>
-<p>Find me in app/views/kids/show.html.erb</p>
+<h1>Kid's Show Page</h1>
+
+<%= @kid.first_name %>'s Page
+
+<br>
+<br>
+
+<%= link_to "Create a New List - IF PARENT", new_list_path  %>
+
+<br>
+<br>
+
+<%= link_to "This specific Kid's Lists - link goes no where", '#' %>
+
+
