--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Lists#show</h1>
-<p>Find me in app/views/lists/show.html.erb</p>
+<h1>Show List Page</h1>
+
+<%= @list.title %>
+
+<p>If Parent, show stats.</p>
+
+<p>If Benef, show buy links.</p>
+
+
+
