--- a/app/views/kids/new.html.erb
+++ b/app/views/kids/new.html.erb
@@ -1,2 +1,7 @@
-<h1>Kids#new</h1>
-<p>Find me in app/views/kids/new.html.erb</p>
+<h1>Create a Kid</h1>
+
+<%= form_for @kid do |f| %>
+  <%= f.text_field :first_name %>
+  <%= hidden_field_tag 'parent_id', @parent.id %>
+  <%= f.submit %>
+<% end %>
