--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Lists#new</h1>
-<p>Find me in app/views/lists/new.html.erb</p>
+<h1>Create a New List</h1>
+
+<%= form_for @list do |f| %>
+  <%= f.text_field :title %>
+  <%= f.submit %>
+<% end %>
