updates views, controllers, and adds password columns to parents and benefactors table

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,2 +1,13 @@
-<h1>Item Show Page</h1>
-<p>Show Items</p>
+<h1><%= @item.title %>'s Show Page</h1>
+
+<p>Show the details of the item.</p>
+
+<p>Image and URL</p>
+
+<span>Price</span>
+
+<p>If BENEF, show BUY button below.</p>
+<%= submit_tag 'Buy' %>
+<p>redirect_to Purchases PAGE</p>
+
+<%= link_to 'Back', "#" %>
