--- a/app/views/kids/new.html.erb
+++ b/app/views/kids/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Create a Kid</h1>
+<h1>Create a Profile Page for Your Kid</h1>
 
 <%= form_for @kid do |f| %>
   <%= f.text_field :first_name %>
