--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Items#index</h1>
-<p>Find me in app/views/items/index.html.erb</p>
+<h1>All Items</h1>
+
+<table>
+  <% @items.each do |item| %>
+    <tr>
+      <td><%= link_to item.title, item %></td>
+    </tr>
+  <% end %>
+</table>
