--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -2,5 +2,6 @@
 
 <%= form_for @item do |f| %>
   <%= f.text_field :title %>
+  <%= hidden_field_tag 'list_id', @list.id %>
   <%= f.submit %>
 <% end %>
