--- a/app/views/parents/new.html.erb
+++ b/app/views/parents/new.html.erb
@@ -1,6 +1,16 @@
 <h1>Sign up your kid in need</h1>
+<h2>Create an account</h2>
 
 <%= form_for @parent do |f| %>
-  <%= f.text_field :first_name %>
-  <%= f.submit %>
+  <%= f.label :first_name %>
+  <%= f.text_field :first_name %><br/>
+  <%= f.label :last_name %>
+  <%= f.text_field :last_name%><br/>
+  <%= f.label "Email" %>
+  <%= f.text_field :email %><br/>
+  <%= f.label :password%>
+  <%= f.password_field :password %><br/>
+  <%= f.label :password_confirmation %>
+  <%= f.password_field :password_confirmation %><br/>
+  <%= f.submit "Submit" %>
 <% end %>
