--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -1,12 +1,10 @@
-<h1>Parents Show Page</h1>
+<h1><%= @parent.first_name %>'s Profile Page</h1>
 
 <%= link_to "Create New Kid", new_kid_path(:parent_id => @parent.id) %>
 <br>
 
-<%= @parent.first_name %>
-
 <ul>
   <% @parent.kids.each do |kid| %>
-    <li><%= link_to kid.first_name, kid %></li>
+    <li><%= link_to kid.first_name, kid %></li> <!-- The only reason why we can refer to "kid.first_name" here is because of the associations in the models. If the associations did not exist, then you cannot refer to the "kid." -->
   <% end %>
 </ul>
