--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,9 @@
 </head>
 <body>
   <nav>
-  <%= show_dynamic_links %>
-</nav>
+    <%= user_nav_link %>
+    <%= login_and_logout %>
+  </nav>
 
 <%= yield %>
 
