--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -10,4 +10,5 @@
 <% end %>
 
 <h4>Don't have an account? 
-<%= link_to 'Sign Up', new_parent_path %>.</h4>
+<%= link_to 'Sign Up as a Guardian', new_parent_path %>.</h4>
+<%= link_to 'Sign Up as a Supporter', new_benefactor_path %>.</h4>
