updates session controller and application helper - also adds foundation

--- a/app/views/benefactors/show.html.erb
+++ b/app/views/benefactors/show.html.erb
@@ -1,8 +1,8 @@
-<h1><%= @benef.first_name %>'s Profile Page</h1>
+<h1><%= @auth_user.first_name %>'s Profile Page</h1>
 
-<span>First Name: <%= @benef.first_name %></span><br>
-<span>Last Name: <%= @benef.last_name %></span><br>
-<span>Email: <%= @benef.email %></span><br>
+<span>First Name: <%= @auth_user.first_name %></span><br>
+<span>Last Name: <%= @auth_user.last_name %></span><br>
+<span>Email: <%= @auth_user.email %></span><br>
 
 <h5>Check out the <%= link_to "Kids in Need", kids_path %></h5>
 
