--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -9,6 +9,7 @@
   <%= submit_tag 'Login' %>
 <% end %>
 
-<h4>Don't have an account? 
-<%= link_to 'Sign Up as a Guardian', new_parent_path %>.</h4>
-<%= link_to 'Sign Up as a Supporter', new_benefactor_path %>.</h4>
+<h4>Don't have an account?</h4> 
+  <span><%= link_to 'Sign Up as a Guardian', new_parent_path %>.</span>
+  <br>
+  <span><%= link_to 'Sign Up as a Supporter', new_benefactor_path %>.</span>
