--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,13 @@
-<h1>Welcome to Wishez</h1>
-<h2>Where you can change the world</h2>
-<%= link_to "I'm a parent", new_parent_path %>
-<br>
-<br>
-<%= link_to "I want to help", kids_path %>
+<h3>Welcome to Donate A Wish... Where you can change the world</h3>
+
+<h5 class= "six columns"><%= link_to "I'm a parent", new_parent_path %></h5>
+<h5 class = "six columns  "><%= link_to "I want to help", kids_path %></h5>
+
+<div id="slideshow">
+   <div>
+     <%= image_tag 'donate-a-wish_home_img1.jpg' %>
+   </div>
+   <div>
+     <%#= image_tag 'donate-a-wish_home_img1.jpg' %>
+   </div>
+</div>
