--- a/app/views/parents/new.html.erb
+++ b/app/views/parents/new.html.erb
@@ -7,10 +7,10 @@
   <%= f.label :last_name %>
   <%= f.text_field :last_name%><br/>
   <%= f.label "Email" %>
-  <%= f.text_field :email %><br/>
+  <%= f.email_field :email %><br/>
   <%= f.label :password%>
   <%= f.password_field :password %><br/>
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %><br/>
-  <%= f.submit "Submit" %>
+  <%= f.submit "Submit" %> 
 <% end %>
