--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,54 @@
 <!DOCTYPE html>
-<html>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7 ]> <html class="ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]>    <html class="ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]>    <html class="ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-  <title>Wishez</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+	<meta charset="utf-8" />
+	
+	<!-- Uncomment to make IE8 render like IE7 -->
+	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
+	
+	<!-- Set the viewport width to device width for mobile -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	
+	<title><%= content_for?(:title) ? yield(:title) : "Donate A Wish" %></title>
+  
+	<!-- Included CSS Files -->
+	<%= stylesheet_link_tag    "application" %>
+	
+	<!-- Included JS Files  -->
+	<%= javascript_include_tag "application" %>
+  
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav>
-    <%= user_nav_link %>
-    <%= login_and_logout %>
-  </nav>
 
-<%= yield %>
+<div class="row">
+  <div class="twelve columns">
+    <header>
+      <div class="fixed contain-to-grid">
+        <nav class= "top-bar">
+          <ul>
+            <li class="name"><h1><a href="/"><%= image_tag 'donate-a-wish_logo.png' %></a></h1></li>
+          </ul>
+          <section>
+            <ul id="nav_login" class="right">
+              <li id="about"><%= link_to "About", "/about" %></li>
+              <li class="contact"><%= link_to "Contact", "/about" %></li>
+              <li class="user"><%= user_nav_link %>  </li>
+              <li class="login"><%= login_and_logout %></li>
+            </ul><!-- end of #nav_login .right -->
+          </section>
+        </nav><!-- end nav-->
+      </div><!-- fixed contain-to-grid--> 
+    </header><!--end header-->
+      <div id="yield">
+        <%= yield %>
+      </div><!--#yield-->
+  </div><!--.twelve columns-->
+</div><!--.row-->
 
 </body>
 </html>
