--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,10 +1,16 @@
-<h1><%= @list.title %> List Page</h1>
+<h1><%= @list.title.titleize %> List Page</h1>
+<p>List Created: <%= time_ago_in_words(@list_added).titleize %> Ago</p>
 
-<%= link_to "IF PARENT, +ADD an item", new_item_path(:list_id => @list.id) %>
+<h3></h3>
+<% if is_parent? %>
+<h1> <%= link_to "+ADD an item", new_item_path(:list_id => @list.id) %> </h1>
+<% else %>
+<h1> Not a parent </h1>
+<% end %>
 
 <ul>
   <% @list.items.each do |item| %>
-    <li><%= link_to item.title, item %></li>
+    <li class="list"><%= link_to item.title.titleize, item %></li>
   <% end %>
 </ul>
 
