--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -1,3 +1,9 @@
 <h1>New Purchase</h1>
 
 Stripe?
+
+<%= form_for @purchase do |f| %>
+  <%= f.hidden_field :item_id, value: params[:item_id] %>
+  <%= f.hidden_field :benefactor_id, value: @auth_user.id %>
+  <%= f.submit %>
+<% end %>
