--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -2,14 +2,15 @@
 
 <%= form_tag '/login' do %>
   <%= label_tag 'Email:' %>
-  <%= text_field_tag 'email' %>
+  <%= email_field_tag 'email' %>
   <br>
   <%= label_tag 'Password:' %>
   <%= password_field_tag 'password' %>
   <%= submit_tag 'Login' %>
 <% end %>
 
-<h4>Don't have an account?</h4> 
+<h5>Don't have an account?</h5> 
   <span><%= link_to 'Sign Up as a Guardian', new_parent_path %>.</span>
+  <br>
   <br>
   <span><%= link_to 'Sign Up as a Supporter', new_benefactor_path %>.</span>
