--- a/app/views/benefactors/show.html.erb
+++ b/app/views/benefactors/show.html.erb
@@ -1,9 +1,9 @@
 <h1><%= @auth_user.first_name %>'s Profile Page</h1>
 
-<span>First Name: <%= @auth_user.first_name %></span><br>
-<span>Last Name: <%= @auth_user.last_name %></span><br>
-<span>Email: <%= @auth_user.email %></span><br>
+<h5>First Name: <%= @auth_user.first_name %></h5>
+<h5>Last Name: <%= @auth_user.last_name %></h5>
+<h5>Email: <%= @auth_user.email %></h5>
 
-<h5>Check out the <%= link_to "Kids in Need", kids_path %></h5>
-
-<p>Show Stats</p>
+<h3>Check out the <%= link_to "Kids in Need", kids_path %></h3>
+<!-- 
+<p>Show Stats</p> -->
