--- a/app/views/kids/index.html.erb
+++ b/app/views/kids/index.html.erb
@@ -1,10 +1,10 @@
 <h1>All Kids</h1>
 
-<% @kids.each do |kid| %>
+<h4><% @kids.each do |kid| %>
   <%= kid.first_name %>
   |
   <%#= kid.last_name %>
   <%= link_to 'Show', kid %>
   <br>
-<% end %>
+<% end %></h4>
 
