--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,14 @@
-<h3>Welcome to Donate A Wish... Where you can change the world</h3>
+<h3>Welcome to Donate A Wish... Where you can change the world!</h3>
 
-<h5 class= "six columns"><%= link_to "I'm a parent", new_parent_path %></h5>
-<h5 class = "six columns  "><%= link_to "I want to help", kids_path %></h5>
+<h4 class= "six columns"><%= link_to "I'm a guardian.", new_parent_path %></h4>
+<h4 class = "six columns  "><%= link_to "I want to help.", kids_path %></h4>
 
-<div id="slideshow">
-   <div>
-     <%= image_tag 'donate-a-wish_home_img1.jpg' %>
-   </div>
-   <div>
-     <%#= image_tag 'donate-a-wish_home_img1.jpg' %>
-   </div>
-</div>
+  <div class="row">
+    <div class="twelve columns">
+      <div id="featured">
+        <%= image_tag 'donate-a-wish_home_img1.jpg' %>
+        <%= image_tag 'donate-a-wish_home_img2.jpg' %>
+        <%= image_tag 'donate-a-wish_home_img3.jpg' %>
+      </div>
+    </div>
+  </div>
