--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @auth_user.first_name %>'s Profile Page</h1>
 
 <h3>
-<%= link_to "Create New Kid", new_kid_path(:parent_id => @auth_user.id) %></h3>
+<%= link_to "Add Child", new_kid_path(:parent_id => @auth_user.id) %></h3>
 
 <ul>
   <% @auth_user.kids.each do |kid| %>
