updates guardian's profile page

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -146,5 +146,12 @@ textarea, #item_image {
   margin-top: 30px;
   height: 50px;
   font-size: 20px;
+}
+
+/* ----------------- Other ----------------*/
+
+.red {
+  background: red;
+}
 
 
