--- a/app/views/benefactors/show.html.erb
+++ b/app/views/benefactors/show.html.erb
@@ -4,6 +4,6 @@
 <h5>Last Name: <%= @auth_user.last_name %></h5>
 <h5>Email: <%= @auth_user.email %></h5>
 
-<h3>Check out the <%= link_to "Kids in Need", kids_path %></h3>
+<h3>Ready to make a kid smile? Meet some of the <%= link_to "kids", kids_path %>.</h3>
 <!-- 
 <p>Show Stats</p> -->
