--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -27,7 +27,7 @@
     </div>
       <%= hidden_field_tag 'list_id', @list.id %>
     <div class="two columns">
-      <%= f.submit :class => "medium radius button enter"%>
+      <%= f.submit :class => "medium button enter"%>
     </div>
   <% end %>
 </div><!--.row-->
