--- a/app/views/kids/new.html.erb
+++ b/app/views/kids/new.html.erb
@@ -31,7 +31,7 @@
     </div>
       <%= hidden_field_tag 'parent_id', @parent.id %>
     <div class="one column">
-      <%= f.submit "Submit", :class => "medium radius button enter" %>
+      <%= f.submit "Submit", :class => "medium button enter" %>
     </div>
   <% end %>
 </div> <!-- end of .row -->
