--- a/app/views/benefactors/index.html.erb
+++ b/app/views/benefactors/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Benefactors Page</h1>
-<%= link_to "I want to help", kids_path %>
+<h1>Become a Supporter</h1>
+  <h3>Interested in helping out?</h3>
+  <div class="row">
+    <div class="twelve columns">
+      <h3>Check out all the  <%= link_to "kids in need", kids_path %> or their <%= link_to "wish list items", items_path %>.</h3>
+    </div>
+</div><!-- end of .row -->
