--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="ten columns">
     <h1><%= @kid.first_name %> <%= @kid.last_name %> </h1>
-  </div> <!-- .nine columns -->
+  </div> <!-- .ten columns -->
   <div class="two columns">
     <% if is_parent? %>
       <h5 class="text_right edit"><%= link_to "Edit Page", edit_kid_path %></h5>
@@ -11,7 +11,7 @@
     <% end %>
   </div>
 
-</div> <!-- .row -->
+</div> <!-- end of top .row -->
 
 <div class="row bottom_border">
     <div class="seven columns">
