--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,20 @@
-<h3>Welcome to Donate A Wish... Where you can change the world!</h3>
-
-<h4 class= "six columns"><%= link_to "I'm a guardian.", new_parent_path %></h4>
-<h4 class = "six columns  "><%= link_to "I want to help.", kids_path %></h4>
-
   <div class="row">
-    <div class="twelve columns">
+    <div class="twelve columns home_pg_img">
       <div id="featured">
         <%= image_tag 'donate-a-wish_home_img1.jpg' %>
         <%= image_tag 'donate-a-wish_home_img2.jpg' %>
         <%= image_tag 'donate-a-wish_home_img3.jpg' %>
-      </div>
-    </div>
-  </div>
+        <%= image_tag 'donate-a-wish_home_img4.jpg' %>
+      </div> <!-- slider feature -->
+    </div><!-- 12 columns -->
+  </div><!-- END PHOTOS .row -->
+
+<h3 id="slogan">Welcome to Donate A Wish... Where you can change the world!</h3>
+
+<div class="six columns">
+  <%= link_to "I'm a guardian.", new_parent_path, :class => "home_page button" %>
+</div>
+
+<div class="six columns">
+  <%= link_to "I want to help.", benefactors_path, :class => "home_page button" %>
+</div>
