--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,16 +1,22 @@
 <% content_for :title, "Login" %>
 
-<%= form_tag '/login' do %>
-  <%= label_tag 'Email:' %>
-  <%= email_field_tag 'email' %>
-  <br>
-  <%= label_tag 'Password:' %>
-  <%= password_field_tag 'password' %>
-  <%= submit_tag 'Login' %>
-<% end %>
+<div class="row">
+  <%= form_tag '/login' do %>
+  <div class="four columns">
+    <%= label_tag 'Email:' %>
+    <%= email_field_tag 'email' %>
+  </div><!-- .four columns -->
+  <div class="four columns">
+    <%= label_tag 'Password:' %>
+    <%= password_field_tag 'password' %>
+  </div><!-- .four columns -->
+  <div class="four columns">
+    <%= submit_tag 'Login', :class => "small button login_page" %>
+  </div><!-- .four columns -->
+  <% end %>
+</div><!-- .row -->
 
 <h5>Don't have an account?</h5> 
-  <span><%= link_to 'Sign Up as a Guardian', new_parent_path %>.</span>
-  <br>
-  <br>
-  <span><%= link_to 'Sign Up as a Supporter', new_benefactor_path %>.</span>
+  <h6><%= link_to 'Sign Up as a Guardian', new_parent_path %>.</h6>
+  
+  <h6><%= link_to 'Sign Up as a Supporter', new_benefactor_path %>.</h6>
